--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h3>404</h3>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>We couldn't find the page you requested.</p>
 </div>
